--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-streamlit==1.35.0
-requests==2.31.0
-pandas==2.2.3
-pip==23.3.1
-setuptools==68.2.2
---only-binary :all:
-
-
+altair==5.5.0
+blinker==1.9.0
+Flask==3.1.1
+GitPython==3.1.44
+joblib==1.5.1
+jsonschema==4.25.0
+narwhals==1.48.0
+nltk==3.9.1
+numpy==2.3.1
+pandas==2.3.1
+pillow==11.3.0
+pyarrow==21.0.0
+pydeck==0.9.1
+requests==2.32.4
+scikit-learn==1.7.0
+scipy==1.16.0
+streamlit==1.47.0
+tenacity==9.1.2
+textblob==0.19.0
+tqdm==4.67.1
+watchdog==6.0.0
+xgboost==3.0.2
